Merged PR 167: Update azure-pipelines.yml for Azure Pipelines